# MaximaFinder

./: MANIFEST.in  README.md  find_maxima.ipynb  find_maxima_cython.ipynb  setup.cfg  setup.py
cython_findmaxima/: is_within.pyx  setup.py
findmaxima2d/: README.md  __init__.py  cfindmaxima2d.pyx  findmaxima2d.py  findmaxima2d.pyx  setup.cfg
