[metadata]
name = findmaxima2d
version = 0.0.1
author = Dominic Waithe
author_email = dominic_waithe@hotmail.com
description = Python module for detecting maxima (or minima) peaks in 2-D grayscale images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dwaithe/MaximaFinder/tree/master/findmaxima2d
project_urls =
    Bug Tracker = https://github.com/dwaithe/MaximaFinder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = cython


[options.extras_require]
dev = cython

[cython-defaults]
include_dirs = include/

[cython-module: findmaxima2d]
sources = findmaxima2d.pyx
          is_within.pyx
include_dirs = eval(__import__('numpy').get_include())
language = c++
